# tabelog-explorer

./: README.md  pyproject.toml  tabelog_fetch.py
.claude/agents/: web-explorer.md
tabelog/: __init__.py  _http.py  _parse.py  areas.py  cli.py  client.py  genres.py  mcp_server.py  models.py  scraper.py
