[project]
name = "tabelog"
version = "0.3.0"
description = "CLI for exploring Tabelog restaurant reviews"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "fastmcp>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
tabelog = "tabelog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
